@@ -9,12 +9,27 @@
 
 namespace WFUT {
 
+/**
+ * The Encoder class provides a few utility functions to convert strings to a 
+ * format suitable for storing in an XML document and as a URL.
+ */ 
 class Encoder {
 public:
-  // Encode/Decode string values to store in an XML file
+  /**
+   * Encode the input string so that is can safely be stored in an XML/HTML 
+   * document.
+   */
   static std::string encodeString(const std::string &str);
+
+  /**
+   * Dencode the input string from an XML encoded string back to it's original
+   * form.
+   */
   static std::string decodeString(const std::string &str);
-  // Encode strings so they can be used in URLs
+
+  /**
+   * Encodes characters in the input string so that it is a valid URL string.
+   */
   static std::string encodeURL(const std::string &str);
 };
 
